[package]
name = "ntfs-undelete"
version = "0.1.0"
edition = "2021"
authors = [ "Nikola Milosavljevic <nikolamilosa20@gmail.com>"]
description = "Rust tool for retrieving deleted files from NTFS filesystems"
readme = "README.md"
repository = "https://github.com/NikolaMilosa/ntfs-undelete"
keywords = ["rust", "file-recovery", "mft", "undelete"]
license = "MIT"

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.19"
mft = "0.6.1"
dialoguer = "0.10.4"